@@ -175,3 +175,4 @@ v 2.0:
 	- Startup errors will now lock out ALL commands other than '/manload'
 	- Fix 'manuadd' to use the default or selected world (via 'manselect'), if the world is not specified in the command.
 	- Expand GlobalGroups.yml and groups.yml to cover the VanishNoPacket plugin. Demonstrating how to negate and add nodes when using the '*' permission with inheritance.
+	- Fix silly nested throw/catch statements. Errors are now correctly generated when reading yml's.
